@@ -1,3 +1,8 @@
+2001-07-02  Tambet Ingo  <tambet@ximian.com>
+
+	* x.pl.in (parse_serverlayout_screen): Implement.
+	(x_xml_print_serverlayout_screen): Implement.
+
 2001-06-29  Hans Petter Jansson  <hpj@ximian.com>
 
 	* print-conf.in: Make XML parsing and options writing work.
